flux/infrastructure/media/sabnzbd/ingress.yaml
# Auto-split from cluster files
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-sso-media-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - sabnzbd.becklab.cloud
    secretName: sabnzbd-tls
  rules:
  - host: sabnzbd.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
